<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="1dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_background"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="9dp"
            android:paddingEnd="38dp"
            android:paddingStart="18dp"
            android:paddingTop="9dp"
            android:text="@string/open"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_background"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="9dp"
            android:paddingEnd="38dp"
            android:paddingStart="18dp"
            android:paddingTop="9dp"
            android:text="@string/share"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_background"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="9dp"
            android:paddingEnd="38dp"
            android:paddingStart="18dp"
            android:paddingTop="9dp"
            android:text="@string/copy"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_background"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="9dp"
            android:paddingEnd="38dp"
            android:paddingStart="18dp"
            android:paddingTop="9dp"
            android:text="@string/setting"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_background"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="9dp"
            android:paddingEnd="38dp"
            android:paddingStart="18dp"
            android:paddingTop="9dp"
            android:text="@string/exit"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>